Mise en place de l'environnement

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "1.aquarium",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch sass:",
@@ -9,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
